--- a/config.toml
+++ b/config.toml
@@ -20,17 +20,19 @@ roster = [
     { name = "Ben", dept = "Infrastructure", ship = "~pitmug-roptec", pic = "https://storage.googleapis.com/media.urbit.org/site/team/ben.jpg"},
     { name = "Elliot", dept = "Infrastructure", ship = "~littel-ponnys", pic = "https://storage.googleapis.com/media.urbit.org/site/team/elliot.jpg"},
     { name = "Corrina", dept = "Operations", ship = "~roslet-tanner", pic = "https://storage.googleapis.com/media.urbit.org/site/team/corrina.jpg"},
-    { name = "David", dept = "Documentation", ship = "~rapfyr-diglyt", pic = "https://storage.googleapis.com/media.urbit.org/site/team/david.jpg"},
+    { name = "David", dept = "Documentation", ship = "~rapfyr-diglyt", pic = "https://storage.googleapis.com/media.urbit.org/site/team/david.svg"},
     { name = "Jared", dept = "Infrastructure", ship = "~nidsut-tomdun", pic = "https://storage.googleapis.com/media.urbit.org/site/team/jared.jpg"},
     { name = "Gavin", dept = "Interface", ship = "~ridlur-figbud", pic = "https://storage.googleapis.com/media.urbit.org/site/team/gavin.jpg"},
     { name = "Isaac", dept = "Infrastructure", ship = "~novlud-padtyv", pic = "https://storage.googleapis.com/media.urbit.org/site/team/isaac.jpg"},
     { name = "Logan", dept = "Infrastructure", ship = "~tacryt-socryp", pic = "https://storage.googleapis.com/media.urbit.org/site/team/logan.jpg"},
     { name = "Jimmy", dept = "Interface", ship = "~haptyl-wanwes", pic = "https://storage.googleapis.com/media.urbit.org/site/team/jimmy.jpg"},
-    { name = "Joe", dept = "Infrastructure", ship = "~master-morzod", pic = "https://storage.googleapis.com/media.urbit.org/site/team/joe.jpg"},
+    { name = "Joe", dept = "Infrastructure", ship = "~master-morzod", pic = "https://storage.googleapis.com/media.urbit.org/site/team/joe.svg"},
     { name = "Philip", dept = "Infrastructure", ship = "~wicdev-wisret", pic = "https://storage.googleapis.com/media.urbit.org/site/team/philip.jpg"},
     { name = "Mark", dept = "Infrastructure", ship = "~palfun-folsup", pic = "https://storage.googleapis.com/media.urbit.org/site/team/mark.jpg"},
-    { name = "Morgan", dept = "Interface", ship = "~hidrel-fabtel", pic = "https://storage.googleapis.com/media.urbit.org/site/team/morgan.jpg"},
     { name = "Robert", dept = "Documentation", ship = "~lodleb-ritrul", pic = "https://storage.googleapis.com/media.urbit.org/site/team/robert.jpg"},
     { name = "Ted", dept = "Infrastructure", ship = "~rovnys-ricfer", pic = "https://storage.googleapis.com/media.urbit.org/site/team/ted.jpg"},
-    { name = "Jon", dept = "Documentation", ship = "~tidrel-tabpub", pic = ""}
+    { name = "Brendan", dept = "Infrastructure", ship = "~moprys-lidtyl", pic = "https://storage.googleapis.com/media.urbit.org/site/team/brendan.jpg"},
+    { name = "Jon", dept = "Documentation", ship = "~tidrel-tabpub", pic = "https://storage.googleapis.com/media.urbit.org/site/team/jon.svg"},
+    { name = "Matilde", dept = "Interface", ship = "~haddef-sigwen", pic = "https://storage.googleapis.com/media.urbit.org/site/team/matilde.svg"},
+    { name = "Ed", dept = "Interface", ship = "~fabled-faster", pic = "https://storage.googleapis.com/media.urbit.org/site/team/ed.svg"}
 ]
