--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ build_search_index = false
 # Put all your custom variables here
 roster = [
     { name = "Galen", dept = "CEO", ship = "~ravmel-ropdyl", pic = "https://storage.googleapis.com/media.urbit.org/site/team/galen.jpg"},
-    { name = "Anthony", dept = "CPO", ship = "~poldec-tonteg", pic = "https://storage.googleapis.com/media.urbit.org/site/team/anthony.jpg"},
+    { name = "Anthony", dept = "CTO", ship = "~poldec-tonteg", pic = "https://storage.googleapis.com/media.urbit.org/site/team/anthony.jpg"},
     { name = "Erik", dept = "COO", ship = "~patnes-rigtyn", pic = "https://storage.googleapis.com/media.urbit.org/site/team/erik.jpg"},
     { name = "Ben", dept = "Infrastructure", ship = "~pitmug-roptec", pic = "https://storage.googleapis.com/media.urbit.org/site/team/ben.jpg"},
     { name = "Elliot", dept = "Infrastructure", ship = "~littel-ponnys", pic = "https://storage.googleapis.com/media.urbit.org/site/team/elliot.jpg"},
