--- a/config.toml
+++ b/config.toml
@@ -27,8 +27,8 @@ roster = [
     { name = "Logan", dept = "Infrastructure", ship = "~tacryt-socryp", pic = "https://storage.googleapis.com/media.urbit.org/site/team/logan.jpg"},
     { name = "Jimmy", dept = "Interface", ship = "~haptyl-wanwes", pic = "https://storage.googleapis.com/media.urbit.org/site/team/jimmy.jpg"},
     { name = "Joe", dept = "Infrastructure", ship = "~master-morzod", pic = "https://storage.googleapis.com/media.urbit.org/site/team/joe.svg"},
-    { name = "Philip", dept = "Infrastructure", ship = "~wicdev-wisret", pic = "https://storage.googleapis.com/media.urbit.org/site/team/philip.jpg"},
-    { name = "Mark", dept = "Infrastructure", ship = "~palfun-folsup", pic = "https://storage.googleapis.com/media.urbit.org/site/team/mark.jpg"},
+    { name = "Philip", dept = "Infrastructure", ship = "~wicdev-wisryt", pic = "https://storage.googleapis.com/media.urbit.org/site/team/philip.jpg"},
+    { name = "Mark", dept = "Infrastructure", ship = "~palfun-foslup", pic = "https://storage.googleapis.com/media.urbit.org/site/team/mark.jpg"},
     { name = "Robert", dept = "Documentation", ship = "~lodleb-ritrul", pic = "https://storage.googleapis.com/media.urbit.org/site/team/robert.jpg"},
     { name = "Ted", dept = "Infrastructure", ship = "~rovnys-ricfer", pic = "https://storage.googleapis.com/media.urbit.org/site/team/ted.jpg"},
     { name = "Brendan", dept = "Infrastructure", ship = "~moprys-lidtyl", pic = "https://storage.googleapis.com/media.urbit.org/site/team/brendan.jpg"},
