tlon.io: new styling, blog, etc.
Part 2 of 2 of an update to tlon.io, using a new styling approach, and generally restructuring the repo.

--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,9 @@
+title = "Tlon"
+description = "Urbit is a personal server built from scratch."
+
+# The default language, used in RSS
+default_language = "en"
+
 # The URL the site will be built for
 base_url = "https://tlon.io"
 
