--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ default_language = "en"
 base_url = "https://tlon.io"
 
 # Whether to automatically compile all Sass files in the sass directory
-compile_sass = true
+compile_sass = false
 
 # Whether to do syntax highlighting
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
