--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.3",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.14",
+    "postcss-import": "^14.1.0",
     "tailwindcss": "^3.1.5"
   }
 }
