--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.3",
     "autoprefixer": "^10.4.7",
+    "cssnano": "^5.1.12",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
     "postcss-cli": "^10.0.0",
